# deeplearning_ai-langchain

./: README.md  pyproject.toml
L1-Model_Prompt_Parser/: chat_via_api.py  chat_via_langchain.py
L2-Memory/: conversation_buffer_memory.py  conversation_buffer_window_memory.py  conversation_summary_memory.py  conversation_token_buffer_memory.py
L3-Chains/: llm_chain.py  router_chain.py  sequential_chain.py  simple_sequential_chain.py
L4-Q&A_over_Documents/: question_answering_over_documents.py
L4-QA_over_Documents/: question_answering_over_documents.py
L5-Evaluation/: qa_application.py
L6-Agents/: agent.py
config/: data.py  open_ai.py
utils/: data_loader.py  open_ai.py  package.py
