[project]
name = "lang-chain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.24",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]
