[project]
name = "lang-chain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.24",
    "numexpr>=2.11.0",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
